--- a/FoodList/Views/Shared/_Layout.cshtml
+++ b/FoodList/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
                 <li><a href="/" class="hover:underline">Главная</a></li>
                 <li><a href="/FoodCul/Result" class="hover:underline">Результаты по дням</a></li>
                 <li><a href="/FoodCul/Crafting" class="hover:underline">Создание блюда</a></li>
+                <li><a href="/FoodCul/Deleting" class="hover:underline">Удаление блюда</a></li>
             </ul>
         </nav>
     </header>
